err/shaveet.err
Listing '.'...
Listing './bin'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/daemon'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystache'...
Listing './lib/python3.5/site-packages/pystache/commands'...
Listing './lib/python3.5/site-packages/pystache/tests'...
Listing './lib/python3.5/site-packages/pystache/tests/data'...
Listing './lib/python3.5/site-packages/pystache/tests/data/locator'...
Listing './lib/python3.5/site-packages/pystache/tests/examples'...
Listing './lib/python3.5/site-packages/pystache-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/python_daemon-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shaveet'...
Compiling './lib/python3.5/site-packages/shaveet/main.py'...
***   File "./lib/python3.5/site-packages/shaveet/main.py", line 34
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shaveet/static'...
Listing './lib/python3.5/site-packages/shaveet-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/static'...
Listing './lib/python3.5/site-packages/static-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/wsgi_jsonrpc'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc/__init__.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc/__init__.py", line 98
    print 'Attribute name conflict -- %s must be removed before attribute of the same name can be added'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc/json_tools.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc/json_tools.py", line 88
    raise Exception, 'unsupported transport'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/._setup.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/setup.py'...
Listing './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/.___init__.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/._json_tools.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/._test_jsonrpc.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/__init__.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/__init__.py", line 98
    print 'Attribute name conflict -- %s must be removed before attribute of the same name can be added'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/json_tools.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/json_tools.py", line 88
    raise Exception, 'unsupported transport'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/test_jsonrpc.py'...
Listing './share'...
Listing './share/python-wheels'...
